@@ -1,5 +1,5 @@
 /************************************************************************************************
- * arch/arm/src/sam34/chip/sam42_vectors.h
+ * arch/arm/src/sam34/chip/sam4s_vectors.h
  *
  *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -37,7 +37,7 @@
  * Pre-processor Definitions
  ************************************************************************************************/
 /* This file is included by sam_vectors.S.  It provides the macro VECTOR that
- * supplies ach SAM3U vector in terms of a (lower-case) ISR label and an
+ * supplies ach SAM4S vector in terms of a (lower-case) ISR label and an
  * (upper-case) IRQ number as defined in arch/arm/include/sam/sam3u_irq.h.
  * sam_vectors.S will defined the VECTOR in different ways in order to generate
  * the interrupt vectors and handlers in their final form.
