@@ -1,5 +1,5 @@
 /****************************************************************************
- * arch/arm/src/chip/sam3u_clockconfig.c
+ * arch/arm/src/chip/sam_clockconfig.c
  *
  *   Copyright (C) 2010, 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
