@@ -1,5 +1,5 @@
 /****************************************************************************
- * arch/arm/src/sam34/sam3u_gpio.c
+ * arch/arm/src/sam34/sam_gpio.c
  * General Purpose Input/Output (GPIO) logic for the SAM3U and SAM4S
  *
  *   Copyright (C) 2010, 2013 Gregory Nutt. All rights reserved.
@@ -502,11 +502,11 @@ int sam_dumpgpio(uint32_t pinset, const char *msg)
   lldbg("   PDSR: %08x    IMR: %08x    ISR: %08x   MDSR: %08x\n",
         getreg32(base + SAM_PIO_PDSR_OFFSET), getreg32(base + SAM_PIO_IMR_OFFSET),
         getreg32(base + SAM_PIO_ISR_OFFSET), getreg32(base + SAM_PIO_MDSR_OFFSET));
-#if defined(CONFIG_ARCH_CHIP_ATSAM3U)
+#if defined(CONFIG_ARCH_CHIP_SAM3U)
   lldbg("   ABSR: %08x SCIFSR: %08x  DIFSR: %08x IFDGSR: %08x\n",
         getreg32(base + SAM_PIO_ABSR_OFFSET), getreg32(base + SAM_PIO_SCIFSR_OFFSET),
         getreg32(base + SAM_PIO_DIFSR_OFFSET), getreg32(base + SAM_PIO_IFDGSR_OFFSET));
-#elif defined(CONFIG_ARCH_CHIP_ATSAM4S)
+#elif defined(CONFIG_ARCH_CHIP_SAM4S)
   lldbg(" ABCDSR: %08x %08x         IFSCSR: %08x  PPDSR: %08x\n",
         getreg32(base + SAM_PIO_ABCDSR1_OFFSET), getreg32(base + SAM_PIO_ABCDSR2_OFFSET),
         getreg32(base + SAM_PIO_IFSCSR_OFFSET), getreg32(base + SAM_PIOC_PPDSR));
@@ -520,7 +520,7 @@ int sam_dumpgpio(uint32_t pinset, const char *msg)
   lldbg(" FRLHSR: %08x LOCKSR: %08x   WPMR: %08x   WPSR: %08x\n",
         getreg32(base + SAM_PIO_FRLHSR_OFFSET), getreg32(base + SAM_PIO_LOCKSR_OFFSET),
         getreg32(base + SAM_PIO_WPMR_OFFSET), getreg32(base + SAM_PIO_WPSR_OFFSET));
-#if defined(CONFIG_ARCH_CHIP_ATSAM4S)
+#if defined(CONFIG_ARCH_CHIP_SAM4S)
   lldbg("   PCMR: %08x PCIMR: %08x   PCISR: %08x   PCRHR: %08x\n",
         getreg32(base + SAM_PIO_PCMR_OFFSET), getreg32(base + SAM_PIO_PCIMR_OFFSET),
         getreg32(base + SAM_PIO_PCISR_OFFSET), getreg32(base + SAM_PIO_PCRHR_OFFSET));
